ibuilder/tests/not_compile/hidden_no_default.stderr
error[E0277]: the trait bound `NonDefault: Default` is not satisfied
 --> $DIR/hidden_no_default.rs:8:10
  |
8 | #[derive(IBuilder)]
  |          ^^^^^^^^ the trait `Default` is not implemented for `NonDefault`
  |
  = note: required by `std::default::Default::default`
  = note: this error originates in the derive macro `IBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `clone` found for struct `NonDefault` in the current scope
 --> $DIR/hidden_no_default.rs:8:10
  |
4 | struct NonDefault {
  | ----------------- method `clone` not found for this
...
8 | #[derive(IBuilder)]
  |          ^^^^^^^^ method not found in `NonDefault`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `clone`, perhaps you need to implement it:
          candidate #1: `Clone`
  = note: this error originates in the derive macro `IBuilder` (in Nightly builds, run with -Z macro-backtrace for more info)
